--- a/14consensus_cn.asciidoc
+++ b/14consensus_cn.asciidoc
@@ -1,11 +1,11 @@
 [[consensus]]
 == 共识
 
-(((“ consensus”，id =“ ix_14consensus-asciidoc0”，range =“ startofrange”)) 在本书中，我们一直在讨论“共识规则”，即每个人都必须同意的规则&#x201d;&#x2014，才能在分散式系统中运行。在计算机科学中，术语_共识_早于区块链，并且涉及更广泛的同步分布式系统中状态的问题，从而使分布式系统中的不同参与者都（最终）都同意一个系统范围的状态。这被称为“达成共识”。
+(((“consensus”，id =“ ix_14consensus-asciidoc0”，range =“ startofrange”))) 在本书中，我们一直在讨论“共识规则”，即每个人都必须同意的规则&#x2014;才能在分散式系统中运行。在计算机科学中，术语 _共识_ 早于区块链，并且涉及更广泛的同步分布式系统中状态的问题，从而使分布式系统中的不同参与者都（最终）都同意一个系统范围的状态。这被称为“达成共识”。
 
 当涉及分布式记录保存和验证的核心功能时，需要保证从状态更新中获得的信息是正确。仅仅依靠信任来确保信息的正确性可能会成为问题。这种普遍性的挑战在分步式网络中尤其明显，因为没有中央实体来决定什么是正确的。缺乏中央决策实体是区块链平台的主要吸引力之一，因为由此产生的抵抗审查的能力以及对授权信息访问权限的缺乏依赖。但是，这些好处是要付出代价的：没有受信任的仲裁员，任何分歧，欺骗或区别都需要使用其他手段加以调和。共识算法是用于协调安全性和分布性的机制。
 
-在区块链中，共识是系统的关键属性。简而言之，资金有危险！因此，在区块链的背景下，_consensus_是关于能够达到一个共同的状态，同时保持去中心化。换句话说，共识旨在产生一个没有统治者的严格规则系统。没有单个人，组织或团体的可以：[“决策&#x201d;;] 相反，权力和控制分散在广泛的参与者网络中，他们的个人利益通过遵守规则和诚实行事来实现。
+在区块链中，共识是系统的关键属性。简而言之，资金有危险！因此，在区块链的背景下，_consensus_ 是关于能够达到一个共同的状态，同时保持去中心化。换句话说，共识旨在产生一个没有统治者的严格规则系统。没有单个人，组织或团体的可以：[“决策&#x201d;;] 相反，权力和控制分散在广泛的参与者网络中，他们的个人利益通过遵守规则和诚实行事来实现。
 
 所有开放式公共区块链都有一个核心原则，就是具有在对抗条件下，无需集中控制就能在分布式网络上达成共识的能力。为了应对这一挑战并保持去中心化的价值，社区继续尝试不同的共识模型。本章探讨了这些共识模型及其对以太坊等支持智能合约的区块链的预期影响。
 
@@ -16,22 +16,22 @@
 
 === 通过工作量证明达成共识
 
-((("consensus","via proof of work")))((("proof of work (PoW)","consensus via")))原始区块链比特币的创建者发明了一种称为_工作量证明_（POW）的_共识算法_。可以说，PoW是比特币架构中的最重要的发明。 PoW的俗称是“挖矿”，但这一俗称使得人们对共识的主要目的产生了误解。人们通常认为挖矿的目的是创造新的货币，因为现实世界中的挖矿目的是提取贵金属或其他资源。实际上，挖矿（和所有其他共识模型一样）的真正目的是“保护区块链”，同时分散对系统的控制权并将权利分散到尽可能多的参与者中。挖矿产生的货币奖励是对那些为系统安全做出贡献的参与者的一种激励：达到目的的手段。从这个意义上说，奖励是手段，而分散的安全性是目的。在PoW共识中，还存在相应的“惩罚”，即参与采矿所需的能源成本。如果参与者不遵守规则而试图获得奖励，他们将承担已经在挖矿上花费的资金风险。因此，PoW共识是风险与回报之间的谨慎平衡，驱使参与者出于自身利益诚实地行事。
+((("consensus","via proof of work")))((("proof of work (PoW)","consensus via")))原始区块链比特币的创建者发明了一种称为 _工作量证明_（POW）的 _共识算法_。可以说，PoW是比特币架构中的最重要的发明。 PoW的俗称是“挖矿”，但这一俗称使得人们对共识的主要目的产生了误解。人们通常认为挖矿的目的是创造新的货币，因为现实世界中的挖矿目的是提取贵金属或其他资源。实际上，挖矿（和所有其他共识模型一样）的真正目的是“保护区块链”，同时分散对系统的控制权并将权利分散到尽可能多的参与者中。挖矿产生的货币奖励是对那些为系统安全做出贡献的参与者的一种激励：达到目的的手段。从这个意义上说，奖励是手段，而分散的安全性是目的。在PoW共识中，还存在相应的“惩罚”，即参与采矿所需的能源成本。如果参与者不遵守规则而试图获得奖励，他们将承担已经在挖矿上花费的资金风险。因此，PoW共识是风险与回报之间的谨慎平衡，驱使参与者出于自身利益诚实地行事。
 
-以太坊目前是一个PoW区块链，因为它使用PoW算法并具有相同的激励系统来实现基本目标：在分散控制权的同时保护区块链。以太坊的PoW算法与比特币算法稍有不同，称为_Ethash_。我们将在<<ethash>>中介绍。
+以太坊目前是一个PoW区块链，因为它使用PoW算法并具有相同的激励系统来实现基本目标：在分散控制权的同时保护区块链。以太坊的PoW算法与比特币算法稍有不同，称为 _Ethash_。我们将在<<ethash>>中介绍。
 
 === 通过权益证明（PoS）达成共识
 
 ((("consensus","via proof of stake")))((("proof of stake (PoS)","consensus via")))从历史上看，工作量证明并不是提出的第一个共识算法。在引入工作量证明之前，许多研究人员提出了基于财务权益的共识算法的变体，现在称为权益证明（PoS）。从某种程度上说，工作量证明是作为权益证明的替代方法而发明的。随着比特币的成功，许多区块链都模仿了工作量证明。然而，对共识算法研究的重视也使得人民开始重新研究权益证明，从而极大地推动了该技术的发展。从一开始，以太坊的创始人就希望最终将其共识算法迁移到权益证明中。实际上，以太坊的工作量证明有一个故意的障碍，称为“难度炸弹”，意在逐渐使以太坊的工作量证明挖矿越来越困难，从而迫使向权益证明过渡。
 
-在本书出版之时，以太坊仍在使用工作量证明，但正在进行的有关权益证明的替代方案的研究已接近完成。以太坊计划的PoS算法称为_Casper_。在过去两年中，卡斯珀（Casper）替代Ethash的计划已被推迟了好几次，因此必须采取干预措施以缓解难度炸弹的发生，从而避免强制废除工作量证明。
+在本书出版之时，以太坊仍在使用工作量证明，但正在进行的有关权益证明的替代方案的研究已接近完成。以太坊计划的PoS算法称为 _Casper_。在过去两年中，卡斯珀（Casper）替代Ethash的计划已被推迟了好几次，因此必须采取干预措施以缓解难度炸弹的发生，从而避免强制废除工作量证明。
 
 通常而言，PoS算法的工作原理如下。区块链跟踪一组验证者，任何持有区块链基础加密货币（以太坊中为以太币）的人都可以通过发送一种特殊的交易来将其以太币锁定为押金来成为验证者。验证人轮流对下一个有效区块提出建议并投票，每个验证人的投票权重取决于其押金（即权益）的大小。重要的是，如果将验证者押在其上的区块被大多数验证者拒绝，则验证者可能会丢失其押金。相反，对于大多数人接受的每个区块，验证者都会获得与他们所存股份成比例的少量奖励。因此，PoS通过奖励和惩罚系统迫使验证者诚实行事并遵循共识规则。 PoS和PoW之间的主要区别在于PoS中的惩罚是区块链固有的资源（例如，失去作为押金的以太币），而在PoW中，惩罚是外部的资源（例如，在加入验证上花费的资金损失 pass:[ <span class="keep-together">电力</span> ]）。
 
 [[ethash]]
 === Ethash：以太坊的工作量证明算法
 
-((("Buterin, Vitalik","and Dagger algorithm")))((("consensus","Ethash as Ethereum PoW algorithm")))((("Dagger-Hashimoto algorithm")))((("Ethash")))((("proof of work (PoW)","Ethash as Ethereum PoW algorithm")))Ethash是以太坊PoW算法。它使用了Dagger–Hashimoto算法的改进，该算法是Vitalik Buterin的Dagger算法和Thaddeus Dryja的Hashimoto算法的结合。((("DAG (directed acyclic graph)")))((("directed acyclic graph (DAG)")))Ethash取决于大型数据集的生成和分析，称为_有向无环图_简写为“ DAG”）。 DAG的初始大小约为1 GB，并将继续缓慢且线性地增长，每个时期更新一次（30,000块，约125小时）。
+((("Buterin, Vitalik","and Dagger algorithm")))((("consensus","Ethash as Ethereum PoW algorithm")))((("Dagger-Hashimoto algorithm")))((("Ethash")))((("proof of work (PoW)","Ethash as Ethereum PoW algorithm")))Ethash是以太坊PoW算法。它使用了Dagger–Hashimoto算法的改进，该算法是Vitalik Buterin的Dagger算法和Thaddeus Dryja的Hashimoto算法的结合。((("DAG (directed acyclic graph)")))((("directed acyclic graph (DAG)")))Ethash取决于大型数据集的生成和分析，称为 _有向无环图_ 简写为“ DAG”）。 DAG的初始大小约为1 GB，并将继续缓慢且线性地增长，每个时期更新一次（30,000块，约125小时）。
 
 DAG的目的是使Ethash PoW算法依赖于维护大型，频繁访问的数据结构。((("application-specific integrated circuits (ASIC)")))((("ASIC (application-specific integrated circuits)")))((("graphics processing unit (GPU), mining and")))反过来，这是为了使Ethash具有“抗ASIC”性，这意味着制造专用集成电路（ASIC）采矿设备要比显卡（GPU）快几个数量级。以太坊的创始人希望避免在PoW采矿中集中化，因为那些可以使用专门设备并拥有大量预算的人可能会主导矿机基础设施并破坏共识算法的安全性。
 
@@ -65,8 +65,8 @@ ____
 
 ((("consensus","principles of")))可以通过提出一些关键问题来更清楚地理解共识算法的原理和假设：
 
-* 谁可以改变过去，如何改变？ （这也称为_不变性_。）
-* 谁可以改变未来，如何改变？ （这也称为_最终性_。）
+* 谁可以改变过去，如何改变？ （这也称为 _不变性_。）
+* 谁可以改变未来，如何改变？ （这也称为 _最终性_。）
 * 进行此类变革的成本是多少？
 * 进行此类变革的权力有多分散？
 * 谁会知道情况是否已改变，他们是如何知道的？
@@ -83,4 +83,4 @@ ____
 
 === 本章小结
 
-在本书编写完成时，以太坊的共识算法仍在不断发展。随着Casper和其他相关技术的成熟并部署在以太坊上，我们在未来的版本中会添加更多详细信息。本章代表我们这次旅程的结束，完成_掌握以太坊_。其他参考材料见附录。感谢您阅读本书，并恭喜您成功完成！(((range="endofrange", startref="ix_14consensus-asciidoc0")))
+在本书编写完成时，以太坊的共识算法仍在不断发展。随着Casper和其他相关技术的成熟并部署在以太坊上，我们在未来的版本中会添加更多详细信息。本章代表我们这次旅程的结束，完成 _掌握以太坊_。其他参考材料见附录。感谢您阅读本书，并恭喜您成功完成！(((range="endofrange", startref="ix_14consensus-asciidoc0")))
